added on chapter click logic

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -8,7 +8,10 @@
     </string-array>
 
     <string-array name="chapter_content">
-        <item>Передано в хадисе, что...</item>
+        <item>Абу Хурайра передает, что Пророк ﷺ сказал: «Если человек скажет утром и вечером:
+            «Пречист Аллах и хвала ему» сто раз, то в Судный день никто не придёт с чем-то лучшим,
+            чем он, за исключением того, кто скажет это и ещё больше этого» [Муслим, 2692]. \n
+            «субхана-Ллахи ва бихамди-х - سبحان الله وبحمده »</item>
         <item>Передано в хадисе, что...</item>
         <item>Передано в хадисе, что...</item>
         <item>Передано в хадисе, что...</item>
